fix top whitespace on some mobile devices on home page

--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -42,7 +42,6 @@ Potential fonts (WIP)
 }
 
 .nameText {
-  font-size: 65px;
   height: 100px;
 }
 
